<resources>
    <string name="app_name" translatable="false">r/ List</string>
    <string name="action_settings">Settings</string>
    <string name="reddit_subscribers_label">subscribers</string>
    <string name="created_label">Created:</string>
    <string name="suscribers_label">Suscribers:</string>
    <string name="language_label">Language:</string>
    <string name="category_label">Category:</string>
    <string name="button_label">GO</string>
    <string name="title_activity_reddit_detail" translatable="false">r/ List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_offlineMode_key" translatable="false">offlineMode</string>
    <string name="pref_offlineMode_label">Offline Mode</string>
</resources>
